--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
                           <groupId>org.springframework.boot</groupId>
                           <artifactId>spring-boot-starter-security</artifactId>
                          </dependency>
+	 <dependency>
+	  <groupId>org.springframework.data</groupId>
+	  <artifactId>spring-data-commons</artifactId>
+	  <version>2.6.1</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
