Commit Zujeily desde la pc de Nahun por problemas tecnicos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.type.descriptor.sql.BasicBinder=TRACE
 
 #MySQL conexion
 #MySql
-spring.datasource.url=jdbc:mysql://localhost:3306/BasePADAZU?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/basepadazu?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=usuario_padazu
 spring.datasource.password=AdminPadazu@1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
